--- a/index.html
+++ b/index.html
@@ -4,22 +4,28 @@
 <meta charset="utf-8">
 <title>Sistema de Facturación</title>
 <link rel="stylesheet" href="css/style_index.css">
+<link rel="stylesheet" href="css/style_login.css">
 </head>
 	
 
 <body>
-	<div class="logotipo" align="center">
-		<img src="img/logo.png" width="350" height="auto" alt=""/>
-	  <p class="slogan">Un mundo de ideas...</p>
+	<div class="login-box">
+		
+		<h2>Login</h2>
+	  <form id="form1" name="form1" method="post" action="php/login.php">
+		<div class="user-box">
+			<input type="text" name="txt_ci_ruc" required="">
+			<label>Usuario</label>
+		  </div>
+		
+	  <div class="user-box">
+		<input type="password" name="txt_password" required="">
+		<label>Contraseña</label>
+	  </div>
+		<input class="buttons" type="submit" name="btn_ingresar" value="Ingresar">
+		<p><a href="#">¿Olvidaste tu Contraseña?</a></p>
+	</form>
 	</div>
-	<section class="form-login">
-		<h5>Formulario Login</h5>
-		<form id="form1" name="form1" method="post" action="php/login.php">
-			<input class="text-box" type="text" name="txt_ci_ruc" value="0850055237" placeholder="CI/RUC">
-			<input class="text-box" type="password" name="txt_password" value="admin" placeholder="Contraseña">
-			<input class="buttons" type="submit" name="btn_ingresar" value="Ingresar">
-			<p><a href="#">¿Olvidaste tu Contraseña?</a></p>
-		</form>
-	</section>
+	
 </body>
 </html>
