Cambio de nombre del boton

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<input type="password" name="txt_password" required="">
 		<label>Contraseña</label>
 	  </div>
-		<input class="buttons" type="submit" name="btn_ingresar" value="Ingresar">
+		<input class="buttons" type="submit" name="btn_ingresar" value="Boon">
 		<p><a href="#">¿Olvidaste tu Contraseña?</a></p>
 	</form>
 	</div>
